@@ -5,12 +5,12 @@ import org.apereo.cas.util.junit.EnabledIfPortOpen;
 
 import com.esotericsoftware.kryo.io.ByteBufferOutput;
 import com.esotericsoftware.kryo.io.Input;
-import com.google.common.collect.ImmutableSet;
 import lombok.val;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
 import java.io.ByteArrayInputStream;
+import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -28,10 +28,10 @@ public class ImmutableNativeJavaSetSerializerTests {
         val pool = new CasKryoPool();
         try (val kryo = pool.borrow()) {
             val output = new ByteBufferOutput(4096);
-            kryo.writeObject(output, ImmutableSet.of("one"));
+            kryo.writeObject(output, Set.of("one"));
 
             val inputStream = new ByteArrayInputStream(output.toBytes());
-            assertNotNull(kryo.readObject(new Input(inputStream), ImmutableSet.class));
+            assertNotNull(kryo.readObject(new Input(inputStream), Set.class));
         }
     }
 }
